@@ -11,6 +11,8 @@ import org.springframework.http.client.HttpComponentsClientHttpRequestFactory;
 import org.springframework.http.converter.json.MappingJackson2HttpMessageConverter;
 import org.springframework.web.client.RestTemplate;
 
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 @Configuration
@@ -24,7 +26,7 @@ public class RestTemplateConfiguration {
     @Bean
     public RestTemplate restTemplate(MappingJackson2HttpMessageConverter messageConverter) {
         RestTemplate restTemplate = new RestTemplate(getClientHttpRequestFactory());
-        restTemplate.setMessageConverters(List.of(messageConverter));
+        restTemplate.setMessageConverters(Collections.singletonList(messageConverter));
 
         return restTemplate;
     }
